add create update delete function

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <div class="container mt-5 w-75">
-    <div th:replace="~{fragments/header :: header(home)}"></div>
+    <div th:replace="~{fragments/header :: header(new)}"></div>
     <div class="jumbotron bg-light border border-info mt-3 py-4" style="min-height: 450px">
-      <h1 class="display-2 text-center" style="margin-top: 90px">Users System</h1>
+      <h1 class="display-2 text-center" style="margin-top: 90px">New User</h1>
       <hr class="w-75">
       <p class="lead text-center text-muted">This application performs CRUD operations (Create, Read, Update and Delete) on Users.</p>
     </div>
