--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div th:fragment="header(option)">
-    <img src="/img/comit.png">
+    <img src="/img/google.png">
     <nav class="navbar navbar-expand-lg navbar-light mt-3" style="background-color:#e9ecef">
       <a class="navbar-brand" href="#">ComIT</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,7 +22,7 @@
             <a class="nav-link" href="/list">List Users</a>
           </li>
           <li class="nav-item" th:classappend="${option == 'new' ? 'active': ''}">
-            <a class="nav-link" href="#">New User</a>
+            <a class="nav-link" href="/new">New User</a>
           </li>
         </ul>
       </div>
